# shdnvg

./: CMakeLists.txt  README.md  SETUP.md  autoupdate.sh  config.txt
src/: main.cpp  main.py
